# Gradex

./: README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
docs/phase/: phase1.md  phase10.md  phase2.md  phase3.md  phase4.md  phase5.md  phase6.md  phase7.md  phase8.md  phase9.md
gradex_contracts/: CHANGELOG.md  Cargo.toml  Dockerfile  README.md
gradex_contracts/src/: copy_engine.rs  lib.rs  royalty.rs  trader_registry.rs  types.rs  vault.rs
gradex_contracts/tests/: copy_engine_tests.rs  integration_tests.rs  royalty_tests.rs  trader_registry_tests.rs  vault_tests.rs
scripts/: copy-engine-listener.ts  deploy-testnet.ts  e2e-tests.ts  execute-copy-trades.ts  monitor.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/dashboard/: layout.tsx  page.tsx
src/app/leaderboard/: page.tsx
src/app/subscribe/: page.tsx
src/app/traders/: page.tsx
src/components/copies/: CopyTradeRow.tsx
src/components/dashboard/: CopyPositionsList.tsx  PerformanceChart.tsx  QuickStats.tsx  Sidebar.tsx  TopBar.tsx
src/components/portfolio/: AdjustAllocationModal.tsx  PnLDistribution.tsx  PortfolioChart.tsx  PortfolioSummary.tsx  PositionsTable.tsx
src/components/social/: ShareButton.tsx
src/components/trader/: SubscribeButton.tsx  TradeHistory.tsx  TraderCard.tsx  TraderFilters.tsx  TraderScoreCard.tsx  TraderStats.tsx
src/components/ui/: toaster.tsx
src/hooks/: useWallet.ts
src/lib/: utils.ts
src/types/: casper.ts  royalty.ts  scoring.ts  supabase.ts  trader.ts  vault.ts
supabase/: migration.sql
(+24 files in other folders)
