[package]
name = "gradex_contracts"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
odra = "2.8.1"
odra-modules = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
odra-test = "2.8.1"

[build-dependencies]
odra-build = "2.8.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = "2.8.1"
odra-cli = "2.8.1"

[[bin]]
name = "gradex_contracts_build_contract"
path = "bin/build_contract.rs"
required-features = []

[[bin]]
name = "gradex_contracts_build_schema"
path = "bin/build_schema.rs"
required-features = []

[[bin]]
name = "gradex_contracts_cli"
path = "bin/cli.rs"
required-features = []

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3

